--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    <audio autoplay src="/assets/music/Howl's Moving Castle - The Flower Garden.mp3"></audio>
+    <audio autoplay src="assets/music/Howl's Moving Castle - The Flower Garden.mp3"></audio>
 
     <!-- Fondo fijo -->
     <div class="fondo-fijo"></div>
