--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Itinerario -->
     <section id="itinerario" class="seccion py-5">
-        <h2 class="text-center mb-4">Itinerario</h2>
+        <h2 class="text-center mb-4 fs-3 fs-md-2">Itinerario</h2>
         <div class="row">
             <!-- Evento 1 -->
             <div class="col-md-4" data-aos="zoom-in">
@@ -114,7 +114,7 @@
 
     <!-- Confirmar Asistencia -->
     <section id="confirmar-asistencia" class="seccion py-5">
-        <h2 class="text-center mb-4">¡Confirma tu Asistencia!</h2>
+        <h2 class="text-center mb-4 fs-3 fs-md-2">¡Confirma tu Asistencia!</h2>
         <div class="text-center">
             <button id="confirmar-btn" class="btn btn-danger">Confirmar Asistencia</button>
         </div>
